tests/testcases/net2/errors/BCE0164-4.boo
"""
BCE0164-4.boo(8,5): BCE0164: Cannot infer generic arguments for method 'BCE0164_4Module.Method[of T]()'. Provide stronger type information through arguments, or explicitly state the generic arguments.
"""

def Method[of T]():
	pass
	
m = Method
